# No-MASS

./: .gitattributes  .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yml  environment.yml  main.py  pyproject.toml
Configuration/: NoMASS.out  NoMASS2  NoMASS2Server  OreniNoMASS.csv
Configuration/Experiment3/: modelDescription.xml
Configuration/HouseLights/: SimulationConfig.xml
Configuration/HouseWindows-MD/: No-MASS.err  NoMASS.out  SimulationConfig.xml  in.idf  modelDescription.xml
Configuration/HouseWindows-MD/agentFMU/: SimulationConfig.xml  modelDescription.xml
Configuration/OfficeAllModels/: SimulationConfig.xml
Configuration/OfficeLearn/: SimulationConfig.xml
Configuration/OfficeLights/: eplusout.end  eplusout.err  in.idf  in_V900.idf  modelDescription.xml
Configuration/OfficeShade/: modelDescription.xml
Configuration/Oreni/: CLERMONT-FERRAND_2019.epw  agentFMU.fmu  cabane.idf  eplusout.audit  eplusout.bnd  eplusout.dxf  eplusout.eio  eplusout.end  eplusout.err  eplusout.eso  eplusout.expidf  eplusout.mdd  eplusout.mtd  eplusout.mtr  eplusout.rdd  eplusout.shd  eplusout.sql  eplustbl.htm
Configuration/Oreni/binaries/x86_64-darwin/: libFMI.dylib
Configuration/Oreni/tmp-fmus/agentFMU.fmu_FMI/: modelDescription.xml
Configuration/OreniTestFMU/: Simulate.fmu  cabane.idf  simulate.py  test.py  tmp.idf
Configuration/OreniTestFMU/Simulate/: modelDescription.xml
Configuration/OreniTestFMU/tmp-fmus/Simulate.fmu_Simulate/: modelDescription.xml
Configuration/OreniTestFMU/tmp-fmus/Simulate.fmu_Simulate/resources/: simulate.py
Documentation/Markdown/: compile_md_to_pdf.sh
ExampleResult/: ResultsLearningBuilding0_Appliance12_12.dat.00000  ResultsLearningBuilding0_Appliance12_12.dat.00001  ResultsLearningBuilding0_Appliance1_1.dat.00000  ResultsLearningBuilding0_Appliance1_1.dat.00001  results.csv
ExampleResult/ResultsLearning/: NoMASS.out.hdf
ExampleResult/Simulation/simulation0/: SimulationConfig.xml
ExampleResult/Simulation/simulation1/: SimulationConfig.xml
ExampleResult/Simulation/simulation2/: SimulationConfig.xml
ExampleResult/Simulation/simulation3/: NoMASS2  SimulationConfig.xml
FMU/: CMakeLists.txt  client_nomass.py  client_protobuf.py  message.pb.cc  message.pb.h  message.proto  message_pb2.py
FMU/Source/: Agent.cpp  Appliance.cpp  Appliance_FMI.cpp  Appliance_Group.hpp  Appliance_Large_CSV.cpp  Appliance_Large_Learning.cpp  Appliance_Large_Learning_CSV.cpp  Appliance_Small.cpp  Building.cpp  Building_Appliances.cpp  Building_Zone.cpp  Configuration.cpp  DataStore.cpp  DataStore.hpp  Environment.cpp  Occupant.cpp  Occupant.hpp  Occupant_Action.hpp  Occupant_Action_HeatingSetPoints_Learning.cpp  Occupant_Action_Window.cpp  Occupant_Action_Window.hpp  Occupant_Action_Window_Stochastic.cpp  Occupant_Zone.cpp  Simulation.cpp  Simulation.hpp  SimulationTime.cpp  StateMachine.cpp  Utility.cpp  fmuTemplate.cpp  main.cpp  main_boris.cpp  simulator_client.cpp  simulator_server.cpp  simulator_server_protobuf.cpp
FMU/tests/Files/: DSM.xml  SimulationConfig.xml  SimulationConfig1.xml  SimulationConfig2.xml  SimulationConfig4.xml  SimulationConfig5.xml  test.py
ResultsLearning/: Building0_Appliance12_12.dat.00000  Building0_Appliance1_1.dat.00000
Scripts/: LearningExample.ipynb  Run.py  Untitled.ipynb  experiment5.ipynb  repeat.py
Scripts/.ipynb_checkpoints/: LearningExample-checkpoint.ipynb  NoMASS-checkpoint.py
energyplus/: Dockerfile
nomass/: NoMASS.py
