[tool.poetry]
name = "nomass"
version = "0.1.0"
description = ""
authors = ["Boris Brangeon <boris.brangeon@plateforme-tipee.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.2.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
tables = "^3.10.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
jupyterlab = "^4.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
